# GMM-PSO-CUDA

./: .gitignore  CMakeLists.txt  README.md  cpu_fitness_times.csv  gpu_fitness_times.csv  gpu_update_times.csv  main.cpp  memcpy_times.py  times.py  updates.py
include/: CUDA_decomposition.h  CUDA_kernels.h  GaussianMixture.h  approximation.h  function.h  individual.h  multivariateGaussian.h  population.h  recorder.h
install/: local_setup.sh  setup.sh
resources/: configGlobal.xml
src/: CUDA_decomposition.cu  CUDA_kernels.cu  GaussianMixture.cpp  function.cpp  individual.cpp  multivariateGaussian.cpp  population.cpp  recorder.cpp
